--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,12 +17,18 @@
   }
 }
 
+
+@font-face {
+  font-family: 'suisse';
+  src: url('/suisse.ttf') format('truetype');
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'suisse';
 }
 
 div {
-  font-family: Andale Mono;
+  font-family: 'suisse';
 }
