--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,44 @@ div {
 html {
   scroll-behavior: smooth;
 }
+
+/* iframe {
+  pointer-events: none;
+} */
+
+#parent {
+  display: flex;
+}
+#narrow {
+  padding-right: 20%;
+}
+#wide {
+  flex: 1;
+}
+
+.splide__slide {
+  padding: 1rem;
+}
+.slide-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.splide__list {
+  display: flex;
+  animation: scroll 50s linear infinite; /* Adjust time for speed */
+}
+
+@keyframes scroll {  /* The autoscroll demons got to me, easy fix, remove this and .splide_list!!!*/
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.splide_track {
+  width: 100%;
+}
