--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@ html {
 
 .splide__slide {
   padding: 1rem;
+  height: 60%;
 }
 .slide-img {
   width: 100%;
@@ -62,4 +63,5 @@ html {
 
 .splide_track {
   width: 100%;
+  height: 40%;
 }
