--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,15 +53,13 @@ html {
 
 .splide__slide {
   padding: 1rem;
-  height: 60%;
 }
+
 .slide-img {
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 4/4;
   border-radius: 4px;
 }
 
 .splide_track {
   width: 100%;
-  height: 40%;
 }
